# frost.rust

./: build.sh  key-1  key-2  key-3  key-4  key.pub  run.sh
gencode/: Cargo.toml
gencode/src/: lib.rs  main.rs
