[package]
name = "gencode"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
regex = "1.6.0"
serde_json = "1.0"
frost-ed25519 = {path = '../frost-ed25519'}
rand = "0.8.4"
libc = "0.2"
serde = "1.0.188"
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
bincode = "2.0.0-rc.2"
getopts = "0.2.21"




[[bin]]
name = "gencode"
path = "src/main.rs"
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false
